--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
   justify-content:center;
   align-items:center;
   height:100vh;
-  background: transparent;
+  background: black;
   overflow:hidden;
   font-family:'Orbitron', sans-serif;
 }
@@ -114,3 +114,4 @@ draw();
 </script>
 </body>
 </html>
+
